# sc1-main-io

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  WubbaLubbaDubDub  bloop-dev  data.template.h  go.sh  main.cpp  tests.cpp  uEnv.txt
.github/workflows/: CI.yml
I2CExample/: ina3221.cpp  ina3221.h  main.cpp
applications/: dataFormat.cpp  dataFormat.h  uartApp.cpp  uartApp.h  uartApp.txt
autocoding/: README.md  Triggers.xml  Triggers_generator.py  autocode.py  config.py  data.xml  format.json  generators.py  struct.cpp  structgen.py  util.py
autocoding/templates/: Triggers_template.cpp  Triggers_template.h  data.template.h  uartApp.template.cpp  uartApp.template.h  uartApp.template.txt
btf/: CMakeLists.txt  gpioinit.sh  i2cinit.sh  linux_config
btf/include/: LogPrinter.h  gtest_globals.h
btf/src/: LogPrinter.cpp  can_test.cpp  gpio_test.cpp  gtests.cpp  i2c_test.cpp  mppt_test.cpp
embedded/FSM/: CMakeLists.txt
embedded/FSM/include/: StateMachine.h  States.h  Transitions.h  Triggers.h
embedded/FSM/src/: StateMachine.cpp  States.cpp  Transitions.cpp  Triggers.cpp
embedded/devices/: CMakeLists.txt  README.md
embedded/devices/include/: bms.h  ina3221.h  lsm6dsl.h  mcp23017.h  motorController.h  mppt.h  rms.h  rtc.h
embedded/devices/src/: bms.cpp  can_device.cpp  ina3221.cpp  lsm6dsl.cpp  mcp23017.cpp  motorController.cpp  mppt.cpp  rms.cpp  rtc.cpp  tca6416.cpp
embedded/drivers/: CMakeLists.txt  README.md
embedded/drivers/include/: adc128.h  analog.h  can.h  gpio.h  i2c-dev.h  i2c.h
embedded/drivers/src/: adc128.cpp  analog.cpp  can.cpp  gpio.cpp  i2c.cpp  serial.cpp
toolchains/: beaglebone.cmake  beaglebone_aarch64.cmake
tools/: detect-os.pl
